Revert "chore: Add ExportOptions.plist for CI/CD builds"
This reverts commit b7761e62870f25123c328e25d1101bcdd04a0875.

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -39,7 +39,8 @@ yarn-error.*
 # testing
 coverage/
 
-# Xcode export options (ExportOptions.plist is needed for CI/CD - do not ignore)
+# Xcode export options
+ExportOptions.plist
 
 # generated native folders
 /ios
