feat: Add expo-image-picker for profile photos (M-5, Build 75)
Integrates expo-image-picker for profile photo selection:
- Action sheet with "Take Photo" and "Choose from Library" options
- Camera permission handling with user-friendly prompts
- Photo library permission handling with descriptive messages
- Square crop (1:1 aspect ratio) with 80% quality compression
- Added expo-image-picker plugin to app.json
- Updated NSCameraUsageDescription to include profile photos
- Added NSPhotoLibraryUsageDescription for iOS photo access

--- a/app/app.json
+++ b/app/app.json
@@ -14,7 +14,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.banksim.wsim",
-      "buildNumber": "74",
+      "buildNumber": "75",
       "associatedDomains": [
         "applinks:wsim.banksim.ca",
         "applinks:wsim-dev.banksim.ca",
@@ -23,7 +23,8 @@
       ],
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
-        "NSCameraUsageDescription": "mwsim needs camera access to scan payment QR codes",
+        "NSCameraUsageDescription": "mwsim needs camera access to scan payment QR codes and take profile photos",
+        "NSPhotoLibraryUsageDescription": "mwsim needs access to your photo library to select a profile photo",
         "LSApplicationQueriesSchemes": [
           "googlechrome",
           "googlechromes",
@@ -48,6 +49,7 @@
     },
     "plugins": [
       "expo-camera",
+      "expo-image-picker",
       [
         "expo-notifications",
         {
