--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "expo": "~54.0.29",
     "expo-camera": "^17.0.10",
     "expo-device": "~8.0.10",
+    "expo-image-picker": "^17.0.10",
     "expo-local-authentication": "^17.0.8",
     "expo-notifications": "~0.32.15",
     "expo-secure-store": "^15.0.8",
